--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -174,6 +174,9 @@ img:hover {
 h1 {
     color: #C0C0C0;
 }
+h3 {
+    color: #C0C0C0;
+}
 
 .bienvenida {
     color: #C0C0C0;
@@ -213,26 +216,27 @@ hr {
 }
 
 .formulario3 {
-    max-width: 400px;
     margin: 0 auto;
-    border: 2px solid yellow;
+    border: 2px solid rgba(255, 193,7);
     border-radius: 1rem;
     padding: 100px;
 
 }
 
 .formulario4 {
-    max-width: 980px;
     margin: 0 auto;
-    border: 2px solid yellow;
+    border: 2px solid rgba(255, 193,7);
     border-radius: 1rem;
     padding: 100px;
+
 }
 
 .formulario5 {
-    max-width: 980px;
     margin: 0 auto;
+    border: 2px solid rgba(255, 193,7);
+    border-radius: 1rem;
     padding: 100px;
+
 }
 
 footer {
