--- a/src/main/resources/templates/depositarfondos.html
+++ b/src/main/resources/templates/depositarfondos.html
@@ -1,83 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="/css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Depositar Fondos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
-
 <body style="background: black;">
-
-  <header>
+<header>
     <nav class="navbar navbar-expand-lg bg-black navbar-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
-          <img src="/img/banco.png" alt="Logo" width="100" height="74"
-               class="d-inline-block align-text-top logo-navbar">
-        </a>
-        <a class="cero navbar-brand text-warning" href="index.html">Alke Wallet</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="uno nav-link active text-warning" aria-current="page" href="menuprincipal.html">Menú principal</a>
-            <a class="dos nav-link active text-warning" aria-current="page" href="depositarfondos.html">Depósito</a>
-            <a class="tres nav-link active text-warning" aria-current="page" href="retirarfondos.html">Transferencia</a>
-            <a class="cuatro nav-link active text-warning" aria-current="page" href="ulimosmov.html">Últimos movimientos</a>
-            <a class="cinco nav-link active text-warning" aria-current="page" href="index.html">Cerrar sesión</a>
-          </div>
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">
+                <img src="/img/banco.png" alt="Logo" width="100" height="74" class="d-inline-block align-text-top logo-navbar">
+            </a>
+            <a class="cero navbar-brand text-warning" href="/">Alke Wallet</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="uno nav-link active text-warning" aria-current="page" th:href="@{/menuprincipal}">Menú principal</a>
+                    <a class="dos nav-link active text-warning" aria-current="page" th:href="@{/depositarfondos}">Depósito</a>
+                    <a class="tres nav-link active text-warning" aria-current="page" th:href="@{/retirarfondos}">Retirar Fondos</a>
+                    <a class="cuatros nav-link active text-warning" aria-current="page" th:href="@{/realizarTransferencia}">Transferencia</a>
+                    <a class="cuatro nav-link active text-warning" aria-current="page" th:href="@{/ultimosmov}">Últimos movimientos</a>
+                    <a class="cinco nav-link active text-warning" aria-current="page" th:href="@{/logout}">Cerrar sesión</a>
+                </div>
+            </div>
         </div>
-      </div>
     </nav>
-  </header>
-  <section class="container-fluid">
-    <div class="formulario3 d-flex flex-column justify-content-center text-white">
-      <div>
-        <h1 class="text-secondary">Depositar</h1>
-        <form>
-          <div class="form-group m-md-4">
-            <label class="m-md-3 text-md-center p-2" for="depositAmount">Monto a depositar:</label>
-            <input type="number" class="form-control text-center" id="depositAmount" placeholder="Ingrese Monto">
-          </div>
-          <button type="submit" class="btn btn-dark m-md-4 text-warning mt-3">Realizar depósito</button>
+</header>
+<main class="container-fluid mt-5">
+    <div class="formulario2 d-flex flex-column justify-content-center text-metallic-silver">
+        <h1 class="text-metallic-silver text-md-center p-2">Depositar Fondos</h1>
+        <form method="post" action="/depositarfondos">
+            <div class="form-group text-center">
+                <label for="monto" class="form-label text-secondary">Monto a depositar:</label>
+                <input type="number" class="form-control" id="monto" name="monto" required>
+            </div>
+            <div class="form-group mt-3 text-center">
+                <button type="submit" class="btn btn-dark text-warning w-100">Depositar</button>
+            </div>
         </form>
-        <a href="menuprincipal.html" class="btn btn-dark m-md-4 text-warning mt-3">Volver al Menú Principal</a>
-      </div>
     </div>
-  </section>
-  <footer class="mt-5" style="background-color: black;">
-    <div class="logo">
-      <p class="parrafo text-warning">©Copyright_2024</p>
+</main>
+<footer class="mt-5" style="background-color: black;">
+    <div class="copy">
+        <p class="parrafo text-warning mt-4">©COPYRIGHT_2024</p>
     </div>
     <div class="redes">
-      <a class="fb" href="https://web.facebook.com/" target="_blank">
-        <i class="bi bi-facebook text-warning"></i></a>
-      <a class="tw" href="https://twitter.com/" target="_blank">
-        <i class="bi bi-twitter-x text-warning"></i></a>
-      <a class="inta" href="https://www.instagram.com/" target="_blank">
-        <i class="bi bi-instagram text-warning"></i></a>
-      <a class="lin" href="https://www.linkedin.com/" target="_blank">
-        <i class="bi bi-linkedin text-warning"></i></a>
+        <a class="fb" href="https://web.facebook.com/" target="_blank">
+            <i class="bi bi-facebook text-warning"></i>
+        </a>
+        <a class="tw" href="https://twitter.com/" target="_blank">
+            <i class="bi bi-twitter-x text-warning"></i>
+        </a>
+        <a class="inta" href="https://www.instagram.com/" target="_blank">
+            <i class="bi bi-instagram text-warning"></i>
+        </a>
+        <a class="lin" href="https://www.linkedin.com/" target="_blank">
+            <i class="bi bi-linkedin text-warning"></i>
+        </a>
     </div>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-    crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="/js/script.js"></script>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="/js/script.js"></script>
 </body>
-
 </html>
