--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
 <section class="container">
     <div class="jumbo mt-5">
         <div class="jumbotron">
-            <h1 class="display-4">ALKE WALLET</h1>
+            <h1 class="text-warning display-4">ALKE WALLET</h1>
             <p class="lead">¡Bienvenido a Alke Wallet!</p>
             <hr class="my-4 border-3">
             <p>Ingresa a Nuestra Plataforma para ver tu Digital Wallet</p>
