--- a/src/main/resources/templates/retirarfondos.html
+++ b/src/main/resources/templates/retirarfondos.html
@@ -1,102 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <title>Retirar Fondos</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
-
 <body style="background: black;">
-
-  <header>
-    <nav class="navbar navbar-expand-lg bg-black navbar-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
-          <img src="../css/img/banco.png" alt="Logo" width="100" height="74"
-               class="d-inline-block align-text-top logo-navbar">
-        </a>
-        <a class="cero navbar-brand text-warning" href="index.html">Alke Wallet</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="uno nav-link active text-warning" aria-current="page" href="menuprincipal.html">Menú principal</a>
-            <a class="dos nav-link active text-warning" aria-current="page" href="depositarfondos.html">Depósito</a>
-            <a class="tres nav-link active text-warning" aria-current="page" href="retirarfondos.html">Transferencia</a>
-            <a class="cuatro nav-link active text-warning" aria-current="page" href="ulimosmov.html">Últimos movimientos</a>
-            <a class="cinco nav-link active text-warning" aria-current="page" href="index.html">Cerrar sesión</a>
-          </div>
+<header>
+  <nav class="navbar navbar-expand-lg bg-black navbar-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">
+        <img src="/img/banco.png" alt="Logo" width="100" height="74" class="d-inline-block align-text-top logo-navbar">
+      </a>
+      <a class="cero navbar-brand text-warning" href="/">Alke Wallet</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+              aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="uno nav-link active text-warning" aria-current="page" th:href="@{/menuprincipal}">Menú principal</a>
+          <a class="dos nav-link active text-warning" aria-current="page" th:href="@{/depositarfondos}">Depósito</a>
+          <a class="tres nav-link active text-warning" aria-current="page" th:href="@{/retirarfondos}">Retirar Fondos</a>
+          <a class="cuatros nav-link active text-warning" aria-current="page" th:href="@{/realizarTransferencia}">Transferencia</a>
+          <a class="cuatro nav-link active text-warning" aria-current="page" th:href="@{/ultimosmov}">Últimos movimientos</a>
+          <a class="cinco nav-link active text-warning" aria-current="page" th:href="@{/logout}">Cerrar sesión</a>
         </div>
       </div>
-    </nav>
-  </header>
-
-  <section class="container-fluid">
-    <div class="formulario4 d-flex flex-column justify-content-center text-white">
-      <div>
-        <h1 class="text-secondary">Retirar fondos</h1>
-        <form>
-          <div class="form-group">
-            <label class="text-secondary" for="searchContact">Buscar en la agenda de transferencias:</label>
-            <input type="text" class="form-control mt-md-3" id="searchContact" placeholder="Buscar contacto">
-          </div>
-          <button type="submit" class="btn btn-dark mt-md-3 text-warning mt-3">Agregar nuevo contacto</button>
-          <h3 class="text-secondary mt-md-3">Contactos</h3>
-          <ul id="contactList" class="list-group">
-            <li class="list-group-item">
-              <div class="contact-info">
-                <span class="contact-name">John Doe</span>
-                <span class="contact-details">CBU: 123456789, Alias: john.doe, Banco: ABC Bank</span>
-              </div>
-            </li>
-            <li class="list-group-item">
-              <div class="contact-info">
-                <span class="contact-name">Jane Smith</span>
-                <span class="contact-details">CBU: 987654321, Alias: jane.smith, Banco: XYZ Bank</span>
-              </div>
-            </li>
-            <button type="submit" class="btn btn-dark mt-md-3 text-warning mt-3">Transferir</button>
-        </form>
-        <a href="menuprincipal.html" class="btn btn-dark mt-md-3 text-warning mt-3">Volver al Menú Principal</a>
+    </div>
+  </nav>
+</header>
+<main class="container-fluid mt-5">
+  <div class="formulario3 d-flex flex-column justify-content-center text-metallic-silver">
+    <h1 class="text-metallic-silver text-md-center p-2">Retirar Fondos</h1>
+    <form method="post" action="/retirarfondos">
+      <div class="form-group text-center">
+        <label for="monto" class="form-label text-secondary">Monto a Retirar:</label>
+        <input type="number" class="form-control" id="monto" name="monto" required>
       </div>
-    </div>
-  </section>
-
-  <footer class="mt-3" style="background-color: black;">
-    <div class="logo">
-      <p class="parrafo text-warning">©Copyright_2024</p>
-    </div>
-    <div class="redes">
-      <a class="fb" href="https://web.facebook.com/" target="_blank">
-        <i class="bi bi-facebook text-warning"></i></a>
-      <a class="tw" href="https://twitter.com/" target="_blank">
-        <i class="bi bi-twitter-x text-warning"></i></a>
-      <a class="inta" href="https://www.instagram.com/" target="_blank">
-        <i class="bi bi-instagram text-warning"></i></a>
-      <a class="lin" href="https://www.linkedin.com/" target="_blank">
-        <i class="bi bi-linkedin text-warning"></i></a>
-    </div>
-  </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-    crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="/js/script.js"></script>
-
+      <div class="form-group mt-3 text-center">
+        <button type="submit" class="btn btn-dark text-warning w-100">Retirar</button>
+      </div>
+    </form>
+  </div>
+</main>
+<footer class="mt-5" style="background-color: black;">
+  <div class="copy">
+    <p class="parrafo text-warning mt-4">©COPYRIGHT_2024</p>
+  </div>
+  <div class="redes">
+    <a class="fb" href="https://web.facebook.com/" target="_blank">
+      <i class="bi bi-facebook text-warning"></i>
+    </a>
+    <a class="tw" href="https://twitter.com/" target="_blank">
+      <i class="bi bi-twitter-x text-warning"></i>
+    </a>
+    <a class="inta" href="https://www.instagram.com/" target="_blank">
+      <i class="bi bi-instagram text-warning"></i>
+    </a>
+    <a class="lin" href="https://www.linkedin.com/" target="_blank">
+      <i class="bi bi-linkedin text-warning"></i>
+    </a>
+  </div>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="/js/script.js"></script>
 </body>
-
 </html>
