--- a/src/main/resources/templates/ultimosmov.html
+++ b/src/main/resources/templates/ultimosmov.html
@@ -4,19 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Menú Principal</title>
+  <title>Últimos Movimientos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 
 <body style="background: black;">
+
 <header>
   <nav class="navbar navbar-expand-lg bg-black navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" th:href="@{/}"><img src="/img/banco.png" alt="Logo" width="100" height="74"
-                                                  class="d-inline-block align-text-top logo-navbar"></a>
+      <a class="navbar-brand" th:href="@{/}">
+        <img th:src="@{/img/banco.png}" alt="Logo" width="100" height="74"
+             class="d-inline-block align-text-top logo-navbar">
+      </a>
       <a class="cero navbar-brand text-warning" th:href="@{/}">Alke Wallet</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
               aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,27 +39,23 @@
   </nav>
 </header>
 
-<main class="container-fluid mt-5">
-  <div class="formulario2 d-flex flex-column justify-content-center text-white">
-    <h1 class="text-md-center p-2">Menú Principal</h1>
-    <div class="form-group text-center">
-      <label class="bienvenida" for="nombre">Bienvenido, <span th:text="${nombre}">Nombre</span></label>
+<section class="container-fluid mt-5">
+  <section class="formulario5 d-flex flex-column justify-content-center text-white mt-5">
+    <div>
+      <h1 class="text-secondary">Últimos Movimientos</h1>
+      <ul class="list-group border border-warning rounded">
+        <li class="list-group-item" th:each="movimiento : ${movimientos}">
+          <span th:text="${movimiento.descripcion}">Descripción del movimiento</span> - <span th:text="${movimiento.monto}">$0.00</span>
+        </li>
+      </ul>
+      <a th:href="@{/menuprincipal}" class="btn btn-dark my-md-3 text-warning mt-3">Volver al Menú Principal</a>
     </div>
-    <div class="form-group text-center">
-      <label class="text-secondary" for="balance">Dinero en cuenta:</label>
-      <h2 class="text-md-center">$<span th:text="${balance}">0</span></h2>
-    </div>
-    <div class="row">
-      <div class="col-12 mb-3">
-        <a th:href="@{/depositarfondos}" class="btn btn-dark text-warning w-100">Depósito</a>
-      </div>
-    </div>
-  </div>
-</main>
+  </section>
+</section>
 
 <footer class="mt-5" style="background-color: black;">
-  <div class="copy">
-    <p class="parrafo text-warning mt-4">©COPYRIGHT_2024</p>
+  <div class="logo">
+    <p class="parrafo text-warning">©Copyright_2024</p>
   </div>
   <div class="redes">
     <a class="fb" href="https://web.facebook.com/" target="_blank">
@@ -71,12 +70,16 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="/js/script.js"></script>
 </body>
+
 </html>
