--- a/src/main/resources/templates/transferencia.html
+++ b/src/main/resources/templates/transferencia.html
@@ -45,7 +45,7 @@
 </header>
 
 <main class="container mt-5">
-    <div class="formulario3 d-flex flex-column justify-content-center text-metallic-silver">
+    <div class="formulario4 d-flex flex-column justify-content-center text-metallic-silver">
         <h1 class="text-light">Transferir Fondos</h1>
         <form th:action="@{/realizarTransferencia}" method="post">
             <div class="mb-3">
@@ -60,7 +60,7 @@
                 <input type="number" id="monto" name="monto" class="form-control" min="1" required>
             </div>
             <div class="mb-3">
-                <button type="submit" class="btn btn-primary">Transferir</button>
+                <button type="submit" class="btn btn-dark text-warning w-100">Transferir</button>
             </div>
             <div th:if="${error}" class="alert alert-danger" role="alert">
                 <span th:text="${error}"></span>
